carousel without click

--- a/src/app/ad-infos/ad-infos.component.css
+++ b/src/app/ad-infos/ad-infos.component.css
@@ -614,3 +614,13 @@ main{
   .prevImage{
     width: 50%;
   }
+ 
+  gallery{
+    background-color: transparent;
+  }
+  .g-dot-inner{
+    background-color: grey!important;
+  }
+  .gallery{
+    width: 80%;
+  }
