carrousel without cilck

--- a/src/app/ad-infos/ad-infos.component.css
+++ b/src/app/ad-infos/ad-infos.component.css
@@ -624,3 +624,6 @@ main{
   .gallery{
     width: 80%;
   }
+  .gallery-item, .gallery-image, .gallery-thumb .gallery-image{
+    transition: 100m;
+  }
