--- a/src/app/ad-infos/ad-infos.component.html
+++ b/src/app/ad-infos/ad-infos.component.html
@@ -26,7 +26,7 @@
             </div>
         </div>
       <div class="gallery "> 
-        <gallery class="background-color:transparent" [items]="slidesStore"  thumbPosition="left" ></gallery>
+        <gallery class="background-color:transparent" [items]="slidesStore"  indexChange="indexChange"  thumbPosition="left" ></gallery>
         
       </div>
       <div class="info">
