--- a/src/app/ad-infos/ad-infos.component.html
+++ b/src/app/ad-infos/ad-infos.component.html
@@ -26,68 +26,70 @@
             </div>
         </div>
       <div class="gallery "> 
-        <gallery class="background-color:transparent" [items]="slidesStore"  indexChange="indexChange"  thumbPosition="left" ></gallery>
+        <gallery  gallerize class="background-color:transparent" [items]="slidesStore"></gallery>
         
       </div>
-      <div class="info">
-        <div class="squarefeet">{{ad.squarefeet}} m2</div>
-
-        <div class="address">{{ad.adress}}</div>
-
-        <div class="socials">
-          <a href="https://www.instagram.com/tvikotrebinje/">
-            <img src="../../assets/instagram (1).png" alt="instagram" />
-          </a>
-
-          <a
-            href="https://www.facebook.com/tvikotrebinje/photos/?ref=page_internal&mt_nav=0&paipv=0&eav=AfZLNIf9x94UD5uqNEiYSArTScYKOxUpmZoqUf3FEkuBVFH_n-jHUZiD-6X6NnzUvCg&_rdr"
-          >
-            <img src="../../assets/facebook.png" alt="facebook" />
-          </a>
-
-          <a href="#" class="wa">
-            <img src="../../assets/whatsap.png" height="32px" alt="whatsapp" />
-          </a>
+      <div class="onlyMobile">
+        <div class="info">
+          <div class="squarefeet">{{ad.squarefeet}} m2</div>
+  
+          <div class="address">{{ad.adress}}</div>
+  
+          <div class="socials">
+            <a href="https://www.instagram.com/tvikotrebinje/">
+              <img src="../../assets/instagram (1).png" alt="instagram" />
+            </a>
+  
+            <a
+              href="https://www.facebook.com/tvikotrebinje/photos/?ref=page_internal&mt_nav=0&paipv=0&eav=AfZLNIf9x94UD5uqNEiYSArTScYKOxUpmZoqUf3FEkuBVFH_n-jHUZiD-6X6NnzUvCg&_rdr"
+            >
+              <img src="../../assets/facebook.png" alt="facebook" />
+            </a>
+  
+            <a href="#" class="wa">
+              <img src="../../assets/whatsap.png" height="32px" alt="whatsapp" />
+            </a>
+          </div>
+  
+          <h2 class="number-of-rooms">{{ad.rooms}}</h2>
+  
+          <div class="floor">{{ad.stage}}</div>
         </div>
-
-        <h2 class="number-of-rooms">{{ad.rooms}}</h2>
-
-        <div class="floor">{{ad.stage}}</div>
-      </div>
-
-      <div class="room-structure">
-        <h3 class="str-h">Struktura soba</h3>
-        <div class="table">
-          <table>
-            <tr>
-              <th class="cell t-heading">Prostorije</th>
-              <th class="cell t-heading">Kvadratura</th>
-            </tr>
-            <tr>
-              <td class="cell row-lighter">Kuhinja</td>
-              <td class="cell row-lighter">{{ad.structure.kitchen}} m2</td>
-            </tr>
-            <tr>
-              <td class="cell row-darker">Dnevna soba</td>
-              <td class="cell row-darker">{{ad.structure.lRoom}} m2</td>
-            </tr>
-            <tr>
-              <td class="cell row-lighter">Spavaca soba</td>
-              <td class="cell row-lighter">{{ad.structure.Broom}} m2</td>
-            </tr>
-            <tr>
-              <td class="cell row-darker">Djecija soba</td>
-              <td class="cell row-darker">{{ad.structure.Kroom}} m2</td>
-            </tr>
-            <tr>
-              <td class="cell row-lighter">Kupatilo</td>
-              <td class="cell row-lighter">{{ad.structure.Kroom}} m2</td>
-            </tr>
-            <tr>
-              <td class="cell row-darker">Ukupno:</td>
-              <td class="cell row-darker">150 m2</td>
-            </tr>
-          </table>
+  
+        <div class="room-structure">
+          <h3 class="str-h">Struktura soba</h3>
+          <div class="table">
+            <table>
+              <tr>
+                <th class="cell t-heading">Prostorije</th>
+                <th class="cell t-heading">Kvadratura</th>
+              </tr>
+              <tr>
+                <td class="cell row-lighter">Kuhinja</td>
+                <td class="cell row-lighter">{{ad.structure.kitchen}} m2</td>
+              </tr>
+              <tr>
+                <td class="cell row-darker">Dnevna soba</td>
+                <td class="cell row-darker">{{ad.structure.lRoom}} m2</td>
+              </tr>
+              <tr>
+                <td class="cell row-lighter">Spavaca soba</td>
+                <td class="cell row-lighter">{{ad.structure.Broom}} m2</td>
+              </tr>
+              <tr>
+                <td class="cell row-darker">Djecija soba</td>
+                <td class="cell row-darker">{{ad.structure.Kroom}} m2</td>
+              </tr>
+              <tr>
+                <td class="cell row-lighter">Kupatilo</td>
+                <td class="cell row-lighter">{{ad.structure.Kroom}} m2</td>
+              </tr>
+              <tr>
+                <td class="cell row-darker">Ukupno:</td>
+                <td class="cell row-darker">150 m2</td>
+              </tr>
+            </table>
+          </div>
         </div>
       </div>
       <div class="description">
