--- a/src/app/ad-infos/ad-infos.component.html
+++ b/src/app/ad-infos/ad-infos.component.html
@@ -26,7 +26,7 @@
             </div>
         </div>
       <div class="gallery "> 
-        <gallery  gallerize class="background-color:transparent" [items]="slidesStore" ></gallery>
+        <gallery  gallerize class="background-color:transparent" #Gallery [items]="slidesStore" ></gallery>
      
       </div>
       <div class="onlyMobile">
