--- a/src/app/ad-infos/ad-infos.component.html
+++ b/src/app/ad-infos/ad-infos.component.html
@@ -26,12 +26,12 @@
             </div>
         </div>
       <div class="gallery "> 
-        <gallery  gallerize class="background-color:transparent" #Gallery [items]="slidesStore" ></gallery>
+        <gallery    class="background-color:transparent" #Gallery [items]="slidesStore" ></gallery>
      
       </div>
       <div class="onlyMobile">
         <div class="info">
-          <div class="squarefeet" (click)="me();">{{ad.squarefeet}} m2</div>
+          <div class="squarefeet">{{ad.squarefeet}} m2</div>
   
           <div class="address">{{ad.adress}}</div>
   
