--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -62,7 +62,7 @@
                 NAŠA ADRESA
             </h6>
             <p>
-                <a href="#!" class="text-reset">Voja Danilovića 6</a>
+                <a href="#!" class="text-reset">Vuka Karadžića 23</a>
               </p>
           </div>
           <!-- Grid column -->
@@ -75,8 +75,7 @@
             <a  class="text-reset" >+387 (0)66 940 924</a>
            
             <h6 class="text-uppercase fw-bold mb-4 mt-2">RADNO VRIJEME</h6> 
-            <a  class="text-reset" >Radnim danom:   07:00 - 17:00</a><br>
-            <a  class="text-reset" >Subota:         07:00 - 15:00</a>
+            <a  class="text-reset" >Radnim danima: 07:00 - 14:00</a><br> 
         
 
  
