--- a/src/app/ads/ads.component.html
+++ b/src/app/ads/ads.component.html
@@ -77,10 +77,10 @@
         </div>
       </div>
 
-      <button class="action-btn">
+      <a a href="/category?id=3"   class="action-btn text-decoration-none">
         POGLEDAJTE SVE NEKRETNINE
         <img src="../../assets//right-arrow (1) 1.png" alt="arrow" />
-      </button>
+      </a>
     </div>
     <div class="ads-back">
       <img
