--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,12 +12,16 @@
           <a href="/category?id=1" class="nav-link  last-link">NEKRETNINE</a>
         </div>
         <div class="nav-socials">
+         <a href="https://www.facebook.com/tvikotrebinje/">
           <img
-            src="../../assets/facebook.png"
-            class="fb-space"
-            alt="facebook nav"
-          />
-          <img src="../../assets/instagram (1).png" alt="instagram nav" />
+          src="../../assets/facebook.png"
+          class="fb-space"
+          alt="facebook nav"
+        />
+         </a>
+         <a href="https://www.instagram.com/tvikotrebinje/">
+         <img src="../../assets/instagram (1).png" alt="instagram nav" />
+        </a>
         </div>
         <div class="burger" (click)="toggleResponsiveMenu()">
           <img src="../../assets/burger.png" alt="burger" />
