--- a/src/app/category/category.component.css
+++ b/src/app/category/category.component.css
@@ -143,6 +143,7 @@
   }
   
   .re-back { 
+    background-image: url('../../assets/bg-category.png');
     background-position: center;
     background-size: cover;
     padding-top: 60px;
