--- a/src/app/contact-comp/contact-comp.component.html
+++ b/src/app/contact-comp/contact-comp.component.html
@@ -52,20 +52,20 @@
         <div class="info">
           <div class="informations">
             <div>
-              <h4 class="info-h">KONTAKT TELEFON</h4>
+              <h4 class="info-h">RADNO VRIJEME</h4>
               <p class="info-text">+387 (0)65 379 162</p>
               <p class="info-text">+387 (0)66 940 924</p>
             </div>
 
             <div>
               <h4 class="info-h">DRUŠTVENE MREŽE</h4>
-              <a class="social-cont"
+              <a class="social-cont" href="https://www.facebook.com/tvikotrebinje/"
                 ><img src="../../assets/facebook.png" height="36" alt="fb"
               /></a>
-              <a class="social-cont"
+              <a class="social-cont" href="https://www.instagram.com/tvikotrebinje/"
                 ><img src="../../assets/instagram (1).png" height="36" alt="insta"
               /></a>
-              <a class="social-cont"
+              <a class="social-cont" href="https://api.whatsapp.com/send/?phone=38765379162&text&type=phone_number&app_absent=0"
                 ><img src="../../assets/whatsap.png" height="36" alt="wa"
               /></a>
             </div>
