--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -53,10 +53,21 @@
                 DRUŠTVENE MREŽE
             </h6>
             <div class="align-items-center mx-auto mb-4">
+              <a href="https://www.facebook.com/tvikotrebinje/">
+
                 
-            <img src="../../assets/fb.png" height="32" class="social" />
-            <img src="../../assets/whatsap.png" height="32" class="social" />
-            <img src="../../assets/ig.png" height="32" class="social" />
+            <img src="../../assets/fb.png" height="32" class="social"   />
+              </a>
+              <a href="https://api.whatsapp.com/send/?phone=38765379162&text&type=phone_number&app_absent=0">
+
+                <img src="../../assets/whatsap.png" height="32" class="social" />
+              </a>
+              <a href="https://www.instagram.com/tvikotrebinje/">
+
+                <img src="../../assets/ig.png" height="32" class="social" />
+
+              </a>
+
             </div>
             <h6 class="text-uppercase fw-bold mt-4">
                 NAŠA ADRESA
