--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -59,9 +59,9 @@
   
       <div class="look-all">
         <h2 class="look-all-heading">POGLEDAJTE SVE NEKRETNINE</h2>
-        <button class="action-btn">
+        <a  href="/category?id=1" class="action-btn">
           POGLEDAJTE SVE <img src="assets/arrow.png" alt="arrow" />
-        </button>
+        </a>
       </div> 
  </div>
  
