--- a/src/app/category/category.component.css
+++ b/src/app/category/category.component.css
@@ -2,6 +2,7 @@
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
+    font-family: "Playfair Display", serif;
   }
   
   /* ///////////////////////////// */
