--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -32,16 +32,16 @@
                 MAPA SAJTA
             </h6>
             <p>
-              <a href="#!" class="text-reset">POČETNA</a>
+              <a href="/" class="text-reset">POČETNA</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">O NAMA</a>
+              <a href="/About-Us" class="text-reset">O NAMA</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">KONTAKT</a>
+              <a href="/contact" class="text-reset">KONTAKT</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">NEKRETNINE</a>
+              <a href="/category?id=1" class="text-reset">NEKRETNINE</a>
             </p>
           </div>
           <!-- Grid column -->
