--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -59,7 +59,7 @@
   
       <div class="look-all">
         <h2 class="look-all-heading">POGLEDAJTE SVE NEKRETNINE</h2>
-        <a  href="/category?id=1" class="action-btn">
+        <a [routerLink]="['/category']" [queryParams]="{id: 1}" class="action-btn text-decoration-none">
           POGLEDAJTE SVE <img src="assets/arrow.png" alt="arrow" />
         </a>
       </div> 
