--- a/src/app/contact-comp/contact-comp.component.css
+++ b/src/app/contact-comp/contact-comp.component.css
@@ -12,7 +12,13 @@
   }
   
   /* ///////////////////////////// */
-  
+  .success {
+    color: #2b7515;
+    background: #ecffd6;
+    border: 1px solid #617c42;
+    margin: 5%;
+    padding: 5%;
+  }
   .section-h {
     margin-top: 40px;
     margin-bottom: 10px;
