--- a/src/app/slider/slider.component.css
+++ b/src/app/slider/slider.component.css
@@ -49,7 +49,8 @@
     .hero-heading {
       font-size: 55px;
       margin-top: 100px;
-      padding: 10px;
+      padding: 16px;
+      background-color: rgb(235, 230, 228,0.5);
     }
   }
   
