--- a/src/app/category/category.component.css
+++ b/src/app/category/category.component.css
@@ -74,6 +74,15 @@
     margin-bottom: 30px;
     color: #000;
   }
+  .ad-title {
+    font-family: "Playfair Display", serif;
+    font-weight: 700;
+    font-size: 22px;
+    margin-left: 20px;
+    margin-top: 15px;
+    margin-bottom: 30px;
+    color: #000;
+  }
   
   .ad-wrapper {
     margin-top: 70px;
