--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -24,11 +24,16 @@
 
       <div class="ad-wrapper nek-u-tr">
         <div *ngFor="let result of results | slice:startIndex:endIndex" class="ad u-tr">
+
+ 
           <a [routerLink]="['/adInfo']" [queryParams]="{id: result.id}" style="text-decoration: none">
+
             <img
               [src]="result.mainImage"
               alt="ad-photo"
             />
+
+          <div class=" ad-title text-nowrap">{{shortAdress(result.title)}}</div>
             <div class="square-feet-num">{{result.squarefeet}} m2</div>
             <div class=" ad-adress text-nowrap">{{shortAdress(result.adress)}}</div>
           </a>
